# cross_modality_llm

./: .gitignore  CLAUDE.md  DEEPSPEED_GUIDE.md  DEEPSPEED_LINPROBE_GUIDE.md  DEEPSPEED_QUICKSTART.md  Untitled  activation_visualize.py  analyze_redundancy_removal.py  analyze_weights.py  analyze_weights_by_layer.py  convert_deepspeed_checkpoint.py  convert_to_hf_format.py  engine_finetune.py  feature_space_analysis.py  finetune.sh  gradient_visualize.py  linear_probe.sh  linear_probe_comparison.py  main_finetune.py  main_finetune_qwen.py  main_linprobe_qwen.py  model_llm.py  model_qwen.py  models_dino.py  neuron_activation_heatmap.py  pyproject.toml  qwen_ddp_linprobe.sh  qwen_deepspeed_experiment.sh  qwen_deepspeed_linprobe.sh  qwen_pretrained_experiment.sh  qwen_random_init_experiment.sh  requirements.txt  resume_qwen_deepspeed.sh  run_linprobe_comparison.sh  save_weights.py  setup.sh  test_checkpoint_save.sh  test_deepspeed_linprobe.sh  weight_analysis.py
deepspeed_configs/: zero2_config.json  zero2_linprobe_config.json  zero2_offload_config.json
scripts/: patch_timm.py
util/: misc.py
