[project]
name = "cross-modality-llm"
version = "0.1.0"
description = "Cross-Modality Transfer Learning: Using GPT-2 for Vision Tasks (LBBT vs DINO comparison)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Yaxin" }
]
keywords = [
    "deep-learning",
    "vision-transformer",
    "gpt2",
    "cross-modality",
    "transfer-learning",
    "linear-probing",
    "dino",
    "self-supervised-learning"
]

dependencies = [
    # Core Deep Learning
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "triton>=3.0.0",
    
    # Transformers & Vision Models
    "transformers>=4.44.0",
    "timm==0.3.2",  # Strict version required by MAE codebase
    "tokenizers>=0.19.0",
    
    # Data Processing
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "datasets>=3.0.0",
    
    # Scientific Computing
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    
    # Progress & Utilities
    "tqdm>=4.66.0",
    "packaging>=24.0",
    
    # Experiment Tracking
    "tensorboard>=2.17.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# Weights & Biases logging (optional)
wandb = [
    "wandb>=0.17.0",
]

# Jupyter notebook support
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.2.0",
]

# Full installation with all optional deps
all = [
    "cross-modality-llm[dev,wandb,notebook]",
]

[project.urls]
Repository = "https://github.com/yaxin/cross_modality_llm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This project is a collection of scripts, not an installable package
# Include only the utility module
packages = ["util"]

[tool.uv]
# Don't install the project itself as an editable package
package = false
# UV-specific configuration
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.uv.sources]
# Use PyTorch index for CUDA builds (uncomment if needed)
# torch = { index = "pytorch-cu121" }
# torchvision = { index = "pytorch-cu121" }

# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
